# ObsidianMusicSorter

./: .gitignore  CLAUDE_CODE_PROMPT.md  NEXT_STEPS.md  PROJECT_SPEC.md  README.md  example_album_4-44.md  example_artist_Jay-Z.md  pyproject.toml  requirements.txt
src/: api_client.py  cli.py  config.py  enricher.py  logger_setup.py  metadata_writer.py  models.py  scanner.py  utils.py
tests/: test_scanner.py  test_utils.py
